--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://pixabay.com/photos/coding-programming-working-macbook-924920/" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://images.app.goo.gl/5fa89wJbZWE6qsbbA" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Welcome to Dhanushka's Portfolio {{name}}!</h1>
                         <hr class="star-light">
