--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Chicago Illinois,
+                        <p>Louisville Kentucky,
                             <br>United States</p>
                     </div>
                     <div class="footer-col col-md-4">
@@ -181,13 +181,13 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/CleverProgrammerr/" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/dhanushka223/" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/CleverProgrammer" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/Dhanushka2231" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -199,7 +199,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Clever Programmer - CP Flask Portfolio 2017 - Created with Love on C9.io
+                        Copyright &copy; Dhanushka's Portfolio - 2020 
                     </div>
                 </div>
             </div>
